[gd_scene load_steps=5 format=3 uid="uid://b18jlv44cg0kh"]

[ext_resource type="Script" path="res://assets/dialogues/radio.gd" id="1_kwr3p"]
[ext_resource type="Script" path="res://assets/dialogues/dialogues_box.gd" id="1_qf8y4"]
[ext_resource type="Script" path="res://addons/ez_dialogue/ez_dialogue_node.gd" id="2_h67ik"]
[ext_resource type="JSON" path="res://assets/dialogues/dialogues_files/test_intro.json" id="2_xf74t"]

[node name="Radio" type="Node3D"]
script = ExtResource("1_kwr3p")
dialog_json = ExtResource("2_xf74t")

[node name="dialoguesBox" type="Node2D" parent="."]
script = ExtResource("1_qf8y4")

[node name="VBoxContainer" type="VBoxContainer" parent="dialoguesBox"]
offset_left = 383.0
offset_top = 471.0
offset_right = 460.0
offset_bottom = 511.0

[node name="Label" type="Label" parent="dialoguesBox/VBoxContainer"]
layout_mode = 2
text = "Label text"

[node name="EzDialogue" type="Node" parent="."]
script = ExtResource("2_h67ik")

[connection signal="dialogue_generated" from="EzDialogue" to="." method="_on_ez_dialogue_dialogue_generated"]
